#42 added FHIR Resource for store and delete samples

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,15 @@ services:
       - './:/app'
     depends_on:
       - mariadb
+    # networks:
+    #   - gin-norg_default
+
+  fhir:
+    image: hapiproject/hapi:latest
+    container_name: fhir-hapi-container
+    ports:
+      - '8080:8080'
+
 
 volumes:
   mariadb_data:
