--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - MARIADB_DATABASE=bitnami_myapp
     volumes:
       - './public/sqldumps:/dumps'
-      - 'mariadb_data:/bitnami/mariadb'
+      - '/mariadb_data:/bitnami/mariadb'
   myapp:
     image: docker.io/bitnami/laravel:9
     container_name: norg_laravel
@@ -26,15 +26,12 @@ services:
       - './:/app'
     depends_on:
       - mariadb
-    # networks:
-    #   - gin-norg_default
+
 
   fhir:
     image: hapiproject/hapi:latest
     container_name: fhir-hapi-container
     ports:
       - '8080:8080'
-
-
-volumes:
-  mariadb_data:
+    depends_on:
+    - myapp
